# Master_Study_Master_Thesis

./: First_instruction.ipynb  Robot_Software.ipynb  create_franka_project.sh  implementation.ipynb  launch_py_instruction.ipynb  setup_environment.sh  setup_instruction.ipynb
MuJoCo_Creating_Scene/: Creating_Obejects.ipynb  MUJOCO_LOG.TXT
ROS2_Instruction/: Robotsoftware.md  implementation.ipynb
fr3_mujoco_ws/: readme.md
fr3_mujoco_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
fr3_mujoco_ws/install/franka_mujoco_controller/share/franka_mujoco_controller/: package.sh  package.xml
fr3_mujoco_ws/install/franka_mujoco_controller/share/franka_mujoco_controller/launch/: teleoperation_2.launch.py
fr3_mujoco_ws/log/: latest_build
fr3_mujoco_ws/results/: continuous_tracking_exp1_20250701_140519.json  continuous_tracking_exp1_20250701_140529.json  continuous_tracking_exp1_20250701_140539.json  continuous_tracking_exp1_20250701_140549.json  continuous_tracking_exp1_20250701_140559.json  continuous_tracking_exp1_20250701_140609.json  continuous_tracking_exp1_20250701_140619.json  continuous_tracking_exp1_20250701_140629.json  continuous_tracking_exp1_20250701_140639.json  continuous_tracking_exp1_20250701_140649.json  continuous_tracking_exp1_20250701_140659.json  continuous_tracking_exp1_20250701_140709.json  continuous_tracking_exp1_20250701_140719.json  continuous_tracking_exp1_20250701_140729.json  continuous_tracking_exp1_20250701_140739.json  continuous_tracking_exp1_20250701_140749.json  continuous_tracking_exp1_20250701_140759.json  continuous_tracking_exp1_20250701_140809.json  continuous_tracking_exp1_20250701_140819.json  continuous_tracking_exp1_20250701_140829.json  (+108 more)
rl_remote_ws/: readme.md  setup_environment.sh
rl_remote_ws/install/rl_remote_controller/share/rl_remote_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
(+92 files in other folders)
